Arreglo de prubas de swagger
