# ForoBE/storage/api-docs/api-docs.json
@@ -5,13 +5,13 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/comments": {
+        "/api/comment": {
             "post": {
                 "tags": [
                     "Comments"
                 ],
                 "summary": "Create a new comment",
-                "operationId": "c6ce2c222c8502aadd6a287105e49307",
+                "operationId": "9e758413e76428b33b55668a7afd26dd",
                 "requestBody": {
                     "description": "Comment data",
                     "required": true,
@@ -55,67 +55,21 @@
                     "200": {
                         "description": "Comment created"
                     }
-                }
-            }
-        },
-        "/api/comments/{id}": {
-            "put": {
-                "tags": [
-                    "Comments"
-                ],
-                "summary": "Update an existing comment",
-                "operationId": "17f16fb86b3722d33c54e6d165a02c80",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID of the comment to update",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "description": "Updated comment data",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "likes",
-                                    "dislikes"
-                                ],
-                                "properties": {
-                                    "likes": {
-                                        "type": "integer"
-                                    },
-                                    "dislikes": {
-                                        "type": "integer"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
                 },
-                "responses": {
-                    "200": {
-                        "description": "Comment updated"
-                    },
-                    "404": {
-                        "description": "Comment not found"
+                "security": [
+                    {
+                        "bearerAuth": []
                     }
-                }
+                ]
             }
         },
-        "/threads": {
+        "/api/threads": {
             "get": {
                 "tags": [
                     "Threads"
                 ],
                 "summary": "Get all threads",
-                "operationId": "20c68d14a9ca10efa754d074b1854f59",
+                "operationId": "a66bb7b16cc834e97883733fc215e170",
                 "responses": {
                     "200": {
                         "description": "Successful operation",
@@ -130,14 +84,21 @@
                             }
                         }
                     }
-                }
-            },
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/thread": {
             "post": {
                 "tags": [
                     "Threads"
                 ],
                 "summary": "Create a new thread",
-                "operationId": "255f0bb7e2ddfb8e2ce4a56c4942750b",
+                "operationId": "daf30f7f2f0e154e16117dfee53f245b",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -159,16 +120,21 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
-        "/threads/{id}": {
+        "/api/thread/{id}": {
             "get": {
                 "tags": [
                     "Threads"
                 ],
                 "summary": "Get a specific thread",
-                "operationId": "0091ace31c00c422b11ca740c0194094",
+                "operationId": "c4a6d0b31bd2fb00df043c34b3fa03cf",
                 "parameters": [
                     {
                         "name": "id",
@@ -191,56 +157,21 @@
                             }
                         }
                     }
-                }
-            },
-            "patch": {
-                "tags": [
-                    "Threads"
-                ],
-                "summary": "Update a thread",
-                "operationId": "5511259e04c10d4299090b3cc1f2c537",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Thread ID",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/Thread"
-                            }
-                        }
-                    }
                 },
-                "responses": {
-                    "200": {
-                        "description": "Thread updated successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Thread"
-                                }
-                            }
-                        }
+                "security": [
+                    {
+                        "bearerAuth": []
                     }
-                }
+                ]
             }
         },
-        "/register": {
+        "/api/register": {
             "post": {
                 "tags": [
                     "Authentication"
                 ],
                 "summary": "Register a new user",
-                "operationId": "0903f2e0df1a8857bee538fc055417f0",
+                "operationId": "8a56853624e025573120a09a4c75d468",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -308,13 +239,13 @@
                 }
             }
         },
-        "/login": {
+        "/api/login": {
             "post": {
                 "tags": [
                     "Authentication"
                 ],
                 "summary": "Authenticate a user",
-                "operationId": "2dd578ff7aba2721293dac66833b27d1",
+                "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -403,13 +334,13 @@
                 }
             }
         },
-        "/logout": {
+        "/api/logout": {
             "post": {
                 "tags": [
                     "Authentication"
                 ],
                 "summary": "Logout the authenticated user",
-                "operationId": "68a6108af04af5e3bc1ea68a6c6f1299",
+                "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
                 "responses": {
                     "200": {
                         "description": "User logged out successfully",
@@ -484,8 +415,14 @@
                         "example": "Thread Title"
                     },
                     "tags": {
-                        "type": "string",
-                        "example": "Tag1, Tag2, Tag3"
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "example": [
+                            "Tag1",
+                            "Tag2"
+                        ]
                     },
                     "text": {
                         "type": "string",
@@ -503,15 +440,17 @@
                     },
                     "author": {
                         "type": "string",
-                        "example": "Author Name"
+                        "example": "Author user Id"
                     },
                     "created_at": {
                         "type": "string",
-                        "format": "datetime"
+                        "format": "datetime",
+                        "example": "2024-03-15 21:50:00"
                     },
                     "updated_at": {
                         "type": "string",
-                        "format": "datetime"
+                        "format": "datetime",
+                        "example": "2024-03-15 22:15:03"
                     }
                 },
                 "type": "object"
@@ -543,6 +482,12 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer"
             }
         }
     }
